--- a/index.html
+++ b/index.html
@@ -10,21 +10,18 @@
 
 <body>
     <header>
-        <h1>Welcome to Imke's Website</h1>
+        <h1>Welcome to this Website</h1>
     </header>
 
-    <h2 id="daily quote"></h2>
-    <h2 id="joke"></h2>
-    <img id="fox-image" src="" alt="">
 
-    <p>My understanding starts here.</p>
+    <p>The following are our two assignments.</p>
 
-<button onclick="loadMarkdown(markdowntest.md', 'content'); makeBackgroundPink();">
-    Open Assignment 1
+<button onclick="loadMarkdown('markdowntest', 'content'); makeBackgroundBlue();">
+    OPEN Assignment 1
 </button>
 
-<button onclick="loadMarkdown(markdowntest2.md', 'content'); makeBackgroundGreen();">
-    Open Assignment 2
+<button onclick="loadMarkdown('markdowntest2', 'content'); makeBackgroundBlue();">
+    OPEN Assignment 2
 </button>
 
 <main>
