--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 </body>
 
 <script>
-async function loadMarkdown(markdowntest.md, componentId) {
+async function loadMarkdown(markdowntest, componentId) {
   const response = await fetch(markdowntest.md);
   const text = await response.text();
   document.getElementById(componentId).innerHTML = marked.parse(text);
 }
 
-async function loadMarkdown(markdowntest2.md, componentId) {
+async function loadMarkdown(markdowntest2, componentId) {
   const response = await fetch(markdowntest2.md);
   const text = await response.text();
   document.getElementById(componentId).innerHTML = marked.parse(text);
