--- a/assignment1.html
+++ b/assignment1.html
@@ -1,1 +1,13 @@
-<title>Assignment 1</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="styles.css">
+  <title>Assignment 1</title>
+</head>
+
+
+
+<h2>Digital Technologies in Intercultural Studies</h2>
+
+<p>Paste here the text from my Assignment 1.</p>
