--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
   <p>The following are our two assignments.</p>
 
-  <button onclick="loadHTML('assignment1.html', 'content'); makeBackgroundBlue();">
+  <button onclick="loadHTML('assignment1.html', 'content'); makeh1Blue();">
     OPEN Assignment 1
   </button>
 
-  <button onclick="loadHTML('assignment2.html', 'content'); makeBackgroundBlue();">
+  <button onclick="loadHTML('assignment2.html', 'content'); makeh1Blue();">
     OPEN Assignment 2
   </button>
 
@@ -36,7 +36,7 @@
       }
     }
 
-    function makeBackgroundBlue() {
+    function makeh1Blue() {
       document.getElementById('content').style.backgroundColor = 'lightblue';
     }
   </script>
