--- a/assignment2.html
+++ b/assignment2.html
@@ -1,1 +1,15 @@
-<title>Assignment 2</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="styles.css">
+  <title>Assignment 2</title>
+</head>
+
+<h2>API</h2>
+
+<p>Explain here what an API is.</p>
+
+<h2>GitHub</h2>
+
+<p>Explain how GitHub works.</p>
