--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
   <p>The following are our two assignments.</p>
 
-  <button onclick="loadHTML('assignment1.html', 'content'); makeh1Blue();">
+  <button onclick="loadHTML('assignment1.html', 'content'); makeBackgroundWhite();">
     OPEN Assignment 1
   </button>
 
-  <button onclick="loadHTML('assignment2.html', 'content'); makeh1Blue();">
+  <button onclick="loadHTML('assignment2.html', 'content'); makeBackgroundWhite();">
     OPEN Assignment 2
   </button>
 
@@ -36,8 +36,8 @@
       }
     }
 
-    function makeh1Blue() {
-      document.getElementById('content').style.backgroundColor = 'lightblue';
+    function makeBackgroundWhite() {
+      document.getElementById('content').style.backgroundColor = 'white';
     }
   </script>
 </body>
